[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "darksoulsapi"
version = "0.0.1"
authors = [
  { name="Mustafa Bugti", email="mbugti@conncoll.edu" }
]
description = "A Dark Souls: Remastered API for AI research"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/joconno2/dsapi"
Issues = "https://github.com/joconno2/dsapi/issues"